fix style of align item center

--- a/styles/takeQuiz.scss
+++ b/styles/takeQuiz.scss
@@ -54,9 +54,19 @@ textarea {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin:auto;
+}
+
+.answer-num {
+  display: flex;
+  align-items: center;
+  margin: auto;
 }
 
 .answer-text-field{
+  display: flex;
+  align-items: center;
+  margin:auto;
   padding: 0 1em;
   width: 40em;
   height: 1em;
